--- a/index.html
+++ b/index.html
@@ -66,20 +66,17 @@
           <div class="events">
             <ol>
               <li>
-                <a href="#0" data-date="11/09/2019" class="selected"
-                  >11 Sept 2019</a
-                >
+                <a href="#0" data-date="11/09/2021">11 Sept</a>
               </li>
-              <li><a href="#0" data-date="23/02/2020">28 Feb</a></li>
-              <li><a href="#0" data-date="20/04/2020">20 Mar</a></li>
-              <li><a href="#0" data-date="20/05/2021">20 May</a></li>
-              <li><a href="#0" data-date="09/07/2021">09 Jul</a></li>
-              <li><a href="#0" data-date="30/08/2022">30 Aug</a></li>
-              <li><a href="#0" data-date="15/09/2022">15 Sep</a></li>
-              <li><a href="#0" data-date="01/11/2023">01 Nov</a></li>
-              <li><a href="#0" data-date="10/12/2023">10 Dec</a></li>
-              <li><a href="#0" data-date="19/01/2024">29 Jan</a></li>
-              <li><a href="#0" data-date="28/06/2024">3 Mar</a></li>
+              <li>
+                <a href="#0" data-date="11/10/2021" class="selected">11 Oct</a>
+              </li>
+
+              <li><a href="#0" data-date="15/12/2021">15 Dic</a></li>
+              <li><a href="#0" data-date="22/06/2022">22 Jun</a></li>
+              <li><a href="#0" data-date="1/02/2023">01 Feb</a></li>
+              <li><a href="#0" data-date="22/05/2023">22 May</a></li>
+              <li><a href="#0" data-date="1/10/2023">1 Oct</a></li>
             </ol>
 
             <span class="filling-line" aria-hidden="true"></span>
@@ -98,143 +95,97 @@
 
       <div class="events-content">
         <ol>
-          <li class="selected" data-date="11/09/2019">
-            <h2>Comienzo de carrera</h2>
-            <em>11 de septiembre de 2019</em>
+          <li data-date="11/09/2021">
+            <h2>
+              Entrenadora de atletismo en la Universidad Politécnica de Valencia
+            </h2>
+            <em>1/05/21 - 31/05/24 </em>
             <p>
-              Primer dia en la universidad en el Doble Grado en Ingenieria y
-              Servicios de telecomunicaciones + Administración y Dirección de
-              empresas.
+              Mi primera experiencia laboral importante y perdurable en el
+              tiempo me la brindó la UPV. Si bien en ese momento yo acudía a las
+              clases de atletismo como alumna mi titulación y experiencia en el
+              sector me dió la oportunidad de poder entrenar a todos aquellos
+              apasionados del running. Sin apenas darme cuenta durante esos más
+              de 3 años pasaron más de 75 alumnos de todas las edades por mis
+              clases abriednome puertas a mi futuro más técnico.
+            </p>
+          </li>
+          <li class="selected" data-date="11/10/2021">
+            <h2>
+              Desarrolladora e investigadora de software en Blockchain UPV
+            </h2>
+            <em>11/10/21 - 31/05/22 </em>
+            <p>
+              Mi primera oportunidad como desarrolla vino por parte del grupo de
+              Generación Espontánea Blocckhain UPV. Este grupo me permitió dar
+              rienda suelta a mi creatividad como programadora y formarme en el
+              mundo del Blockchain generando cadenas y smart contracts. Además
+              de formarme financieramente acerca de este nuevo sector.
             </p>
           </li>
 
-          <li data-date="28/02/2014">
-            <h2>Event title here</h2>
-            <em>February 28th, 2014</em>
+          <li data-date="15/12/2021">
+            <h2>CEO Blockchain UPV</h2>
+            <em>15/12/21 - 31/07/22</em>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
+              Adquirí un rol en el equipo de Blocckahin UPV de gestión y
+              organización debido a que el grupo lo requeria y mis habilidades
+              eran adecuadas para hacerme responssable de la organización del
+              equipo. Además con está experiencia tuve la oportunidad de ayudar
+              a la creación de HUB de Blockchain junto con StarUp VLC y empresas
+              pioneras del sector.
             </p>
           </li>
 
-          <li data-date="20/04/2014">
-            <h2>Event title here</h2>
-            <em>March 20th, 2014</em>
+          <li data-date="22/06/2022">
+            <h2>Desarrolladora UX/UI en prácticas en Capgemini</h2>
+            <em>22/06/22 - 31/12/22</em>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
+              Una vez que me di a conocer en el sector tech Capgemini decidió
+              darme la oportunidad de tener mi primera experiencia en una
+              consultora pese a estar a mitad de camino en la carrera. Durante 8
+              meses me formé y desarrollé con herramientas técnicas como html5,
+              css, AngularJS, y otras de organización como Jira.
             </p>
           </li>
 
-          <li data-date="20/05/2014">
-            <h2>Event title here</h2>
-            <em>May 20th, 2014</em>
+          <li data-date="1/02/2023">
+            <h2>Desarrolladora de sistemas embebidos en StartUp</h2>
+            <em>Febrero 2023</em>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
+              Pese a la breve experiencia que me pudo otorgar esta StartUp por
+              razones económicas la formación que me brindó en el ambito del
+              diseño y la documentación técnicas en el rol de desarrolladora de
+              sistemas embebidos fue mmuy completa, ofreciendome así la
+              posibilidad de hacer mis ideas realidad en el momento en el que lo
+              desee. La herramienta más utilizada fue Altium.
             </p>
           </li>
 
-          <li data-date="09/07/2014">
-            <h2>Event title here</h2>
-            <em>July 9th, 2014</em>
+          <li data-date="22/05/2023">
+            <h2>Dessarrolladora de firmware en el Instituto ITACA</h2>
+            <em>22/05/2023 - 31/07/2024</em>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
+              Tras mi breve contacto con los sistemas embebidos y una idea loca
+              de desarrollo mi tutor, Antonio Millana, me dió la oportunidad de
+              seguir desarrollandome como ingeniera y hacer mi TFG con él. Este
+              proyecto consistió en desarrollar un sistema de control del
+              tráfico desde cero por lo que pude aprender a diseñar prototipos
+              de sistemas embebidos hasta el desarollo del producto final y el
+              estudio de la viabilidad en el mercado. Esta experincia sin duda
+              es una de las más enriqucedoras para mi debido a su complejidad.
             </p>
           </li>
 
-          <li data-date="30/08/2014">
-            <h2>Event title here</h2>
-            <em>August 30th, 2014</em>
+          <li data-date="1/10/2023">
+            <h2>Entrenadora de Escaladda</h2>
+            <em>1-10/2023 - Actualidad </em>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
-            </p>
-          </li>
-
-          <li data-date="15/09/2014">
-            <h2>Event title here</h2>
-            <em>September 15th, 2014</em>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
-            </p>
-          </li>
-
-          <li data-date="01/11/2014">
-            <h2>Event title here</h2>
-            <em>November 1st, 2014</em>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
-            </p>
-          </li>
-
-          <li data-date="10/12/2014">
-            <h2>Event title here</h2>
-            <em>December 10th, 2014</em>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
-            </p>
-          </li>
-
-          <li data-date="19/01/2015">
-            <h2>Event title here</h2>
-            <em>January 19th, 2015</em>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
-            </p>
-          </li>
-
-          <li data-date="03/03/2015">
-            <h2>Event title here</h2>
-            <em>March 3rd, 2015</em>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
-              praesentium officia, fugit recusandae ipsa, quia velit nulla
-              adipisci? Consequuntur aspernatur at, eaque hic repellendus sit
-              dicta consequatur quae, ut harum ipsam molestias maxime non nisi
-              reiciendis eligendi! Doloremque quia pariatur harum ea amet
-              quibusdam quisquam, quae, temporibus dolores porro doloribus.
+              El desarrollo de mi carrera académico-profesional ha ido de la
+              mano de múltiples trabajos en el sector deportivo, debido a mi
+              estrecha relación con éste. En octubre de 2023 el Laif Climbing
+              Gym me dió la oportunidad de llevar más allá una de mis pasiones,
+              la escalada.
             </p>
           </li>
         </ol>
