--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
                     alt="Deportes 1"
                     class="d-block w-100"
                   />
-                  <img
+                  <!-- <img
                     src="./images/DEPORTES/DSC00584.JPG"
                     alt="Deportes 2"
                     class="d-block w-100"
-                  />
+                  /> -->
                   <img
                     src="./images/DEPORTES/DSC00634.JPG"
                     alt="Deportes 3"
@@ -276,11 +276,11 @@
                     alt="Culturas 1"
                     class="d-block w-100"
                   />
-                  <img
+                  <!-- <img
                     src="images/CULTURA/DSC01618.JPG"
                     alt="Culturas 2"
                     class="d-block w-100"
-                  />
+                  /> -->
                   <img
                     src="images/CULTURA/DSC01707.JPG"
                     alt="Culturas 3"
