--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
               Mi primera oportunidad como desarrolla vino por parte del grupo de
               Generación Espontánea Blocckhain UPV. Este grupo me permitió dar
               rienda suelta a mi creatividad como programadora y formarme en el
-              mundo del Blockchain generando cadenas y smart contracts. Además
-              de formarme financieramente acerca de este nuevo sector.
+              mundo del Blockchain generando <b>cadenas</b> y
+              <b>smart contracts</b>. Además de formarme financieramente acerca
+              de este nuevo sector.
             </p>
           </li>
 
@@ -132,8 +133,8 @@
               organización debido a que el grupo lo requeria y mis habilidades
               eran adecuadas para hacerme responssable de la organización del
               equipo. Además con está experiencia tuve la oportunidad de ayudar
-              a la creación de HUB de Blockchain junto con StarUp VLC y empresas
-              pioneras del sector.
+              a la creación de <b>HUB de Blockchain</b> junto con
+              <b>StarUp VLC</b> y empresas pioneras del sector.
             </p>
           </li>
 
@@ -144,8 +145,8 @@
               Una vez que me di a conocer en el sector tech Capgemini decidió
               darme la oportunidad de tener mi primera experiencia en una
               consultora pese a estar a mitad de camino en la carrera. Durante 8
-              meses me formé y desarrollé con herramientas técnicas como html5,
-              css, AngularJS, y otras de organización como Jira.
+              meses me formé y desarrollé con herramientas técnicas como
+              <b> html5, css, AngularJS</b>, y otras de organización como Jira.
             </p>
           </li>
 
@@ -155,10 +156,10 @@
             <p>
               Pese a la breve experiencia que me pudo otorgar esta StartUp por
               razones económicas la formación que me brindó en el ambito del
-              diseño y la documentación técnicas en el rol de desarrolladora de
-              sistemas embebidos fue mmuy completa, ofreciendome así la
+              diseño y la documentación técnicas en
+              <b>sistemas embebidos</b> fue mmuy completa, ofreciendome así la
               posibilidad de hacer mis ideas realidad en el momento en el que lo
-              desee. La herramienta más utilizada fue Altium.
+              desee. La herramienta más utilizada fue <b>Altium</b>.
             </p>
           </li>
 
@@ -171,9 +172,12 @@
               seguir desarrollandome como ingeniera y hacer mi TFG con él. Este
               proyecto consistió en desarrollar un sistema de control del
               tráfico desde cero por lo que pude aprender a diseñar prototipos
-              de sistemas embebidos hasta el desarollo del producto final y el
-              estudio de la viabilidad en el mercado. Esta experincia sin duda
-              es una de las más enriqucedoras para mi debido a su complejidad.
+              de sistemas embebidos hasta el<b>
+                desarollo del producto final
+              </b>
+              y el estudio de la <b> viabilidad</b> en el mercado. Esta
+              experincia sin duda es una de las más enriqucedoras para mi debido
+              a su complejidad.
             </p>
           </li>
 
@@ -356,7 +360,8 @@
 
           <div class="pdf-container">
             <h3>
-              1er Premio en el V Concurso de Redacción Periodística para Jóvenes
+              <b>1er Premio</b> en el V Concurso de Redacción Periodística para
+              Jóvenes organizado por National Geographic y RBA.
             </h3>
             <a
               href="https://www.nationalgeographic.com.es/concursos/lee-trabajados-ganadores-v-concurso-redaccion-periodistica-para-jovenes_22671"
