--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
           <li data-date="1/10/2023">
             <h2>Entrenadora de Escaladda</h2>
-            <em>1-10/2023 - Actualidad </em>
+            <em>1/10/2023 - Actualidad </em>
             <p>
               El desarrollo de mi carrera académico-profesional ha ido de la
               mano de múltiples trabajos en el sector deportivo, debido a mi
