--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio de Flor Larraburu</title>
+    <title>Portfolio de Flor Larraburu</title>
+    <link
+      rel="icon"
+      href="images/lavanda.png"
+      type="image/x-icon"
+      alt="Flor iconos creados por Freepik - Flaticon"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
