--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <em>11/10/21 - 31/05/22 </em>
             <p>
               Mi primera oportunidad como desarrolla vino por parte del grupo de
-              Generación Espontánea Blocckhain UPV. Este grupo me permitió dar
+              Generación Espontánea Blockhain UPV. Este grupo me permitió dar
               rienda suelta a mi creatividad como programadora y formarme en el
               mundo del Blockchain generando <b>cadenas</b> y
               <b>smart contracts</b>. Además de formarme financieramente acerca
@@ -136,9 +136,9 @@
             <h2>CEO Blockchain UPV</h2>
             <em>15/12/21 - 31/07/22</em>
             <p>
-              Adquirí un rol en el equipo de Blocckahin UPV de gestión y
+              Adquirí un rol en el equipo de Blockahin UPV de gestión y
               organización debido a que el grupo lo requeria y mis habilidades
-              eran adecuadas para hacerme responssable de la organización del
+              eran adecuadas para hacerme responsable de la organización del
               equipo. Además con está experiencia tuve la oportunidad de ayudar
               a la creación de <b>HUB de Blockchain</b> junto con
               <b>StarUp VLC</b> y empresas pioneras del sector.
@@ -151,8 +151,8 @@
             <p>
               Una vez que me di a conocer en el sector tech Capgemini decidió
               darme la oportunidad de tener mi primera experiencia en una
-              consultora pese a estar a mitad de camino en la carrera. Durante 8
-              meses me formé y desarrollé con herramientas técnicas como
+              consultora pese a estar a mitad de carrera. Durante 8 meses me
+              formé y desarrollé con herramientas técnicas como
               <b> html5, css, AngularJS</b>, y otras de organización como Jira.
             </p>
           </li>
@@ -166,7 +166,7 @@
               diseño y la documentación técnicas en
               <b>sistemas embebidos</b> fue mmuy completa, ofreciendome así la
               posibilidad de hacer mis ideas realidad en el momento en el que lo
-              desee. La herramienta más utilizada fue <b>Altium</b>.
+              desee. Siendo la herramienta más utilizada fue <b>Altium</b>.
             </p>
           </li>
 
@@ -178,13 +178,11 @@
               de desarrollo mi tutor, Antonio Millana, me dió la oportunidad de
               seguir desarrollandome como ingeniera y hacer mi TFG con él. Este
               proyecto consistió en desarrollar un sistema de control del
-              tráfico desde cero por lo que pude aprender a diseñar prototipos
-              de sistemas embebidos hasta el<b>
-                desarollo del producto final
-              </b>
-              y el estudio de la <b> viabilidad</b> en el mercado. Esta
-              experincia sin duda es una de las más enriqucedoras para mi debido
-              a su complejidad.
+              tráfico desde cero por lo que pude aprender a diseñar desde
+              prototipos hasta el<b> producto final </b> y el estudio de la
+              <b> viabilidad</b> en el mercado. <br />
+              Esta experincia sin duda es una de las más enriqucedoras para mi
+              debido a su complejidad.
             </p>
           </li>
 
