--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
               tráfico desde cero por lo que pude aprender a diseñar desde
               prototipos hasta el<b> producto final </b> y el estudio de la
               <b> viabilidad</b> en el mercado. <br />
-              Esta experincia sin duda es una de las más enriqucedoras para mi
-              debido a su complejidad.
+              Esta experiencia, sin duda, es una de las más enriqucedoras para
+              mi debido a su complejidad.
             </p>
           </li>
 
