--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           </li>
 
           <li data-date="22/05/2023">
-            <h2>Dessarrolladora de firmware en el Instituto ITACA</h2>
+            <h2>Desarrolladora de firmware en el Instituto ITACA</h2>
             <em>22/05/2023 - 31/07/2024</em>
             <p>
               Tras mi breve contacto con los sistemas embebidos y una idea loca
@@ -187,7 +187,7 @@
           </li>
 
           <li data-date="1/10/2023">
-            <h2>Entrenadora de Escaladda</h2>
+            <h2>Entrenadora de Escalada</h2>
             <em>1/10/2023 - Actualidad </em>
             <p>
               El desarrollo de mi carrera académico-profesional ha ido de la
