--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               sector me dió la oportunidad de poder entrenar a todos aquellos
               apasionados del running. Sin apenas darme cuenta durante esos más
               de 3 años pasaron más de 75 alumnos de todas las edades por mis
-              clases abriednome puertas a mi futuro más técnico.
+              clases abriendome puertas a mi futuro más técnico.
             </p>
           </li>
           <li class="selected" data-date="11/10/2021">
