"pdf y min heigh media"

--- a/index.html
+++ b/index.html
@@ -398,25 +398,12 @@
               <b>1er Premio</b> en el V Concurso de Redacción Periodística para
               Jóvenes organizado por National Geographic y RBA.
             </h3>
-            <a
-              href="https://www.nationalgeographic.com.es/concursos/lee-trabajados-ganadores-v-concurso-redaccion-periodistica-para-jovenes_22671"
-              target="_blank"
-              class="article-link"
-            >
-            </a>
-            <div class="pdf-link">
-              <a href="#" id="openModal">Abrir PDF</a>
-            </div>
-          </div>
-
-          <div id="pdfModal" class="modal">
-            <div class="modal-content">
-              <span class="close">&times;</span>
+            <div class="pdf-viewer">
               <iframe
                 src="pdf/Un Llamado Urgente para Proteger Nuestros Océanos.pdf"
                 type="application/pdf"
                 width="100%"
-                height="100%"
+                height="600px"
               ></iframe>
             </div>
           </div>
